# mulgogi

./: README.md  pyproject.toml
.github/workflows/: pypi.yml
mulgogi/: __init__.py  __main__.py  data.py  game.py  i18n.py  main.py  mulgogi.tcss  particles.py  pixel_art.py  ui.py
scripts/: generate-homebrew-formula.py
